# Parallel-evolution

./: .gitignore  README.md  description.md  output_example.md
CUDA/: Makefile  evolution_CUDA_g110.cu  g110_p011563.cu  tests.md
CUDA_Driver_API/: Makefile  README.md  evolution_CUDA_g110.c  evolution_kernels.cu  kernels.ptx
CUDA_Driver_API/include/: atomic.h  cuda_check.h  evolution.h  glibc_nrand48.h
MPI/: Makefile  tests.md
OpenMP/: Makefile  g110_p003340.c  tests.md
Rust/: .gitignore  Cargo.toml  README.md  evolution.rs
tested_executions/: 22.sh  23.sh  24.sh  25.sh  26.sh  27.sh  28.sh  29.sh  30.sh  31.sh  32.sh  33.sh  34.sh  35.sh  36.sh  37.sh  58.sh  59.sh  61.sh  62.sh  63.sh  README.md
