[package]
name = "evolution"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
rand = "*"
rand_chacha = "*"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "evolution"
path = "evolution.rs"
